fix: main & hero bg-color. hero z-index

--- a/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
+++ b/wp-content/themes/vmv-theme/assets/css/vmv-theme.css
@@ -113,12 +113,18 @@ body {
   cursor: pointer;
 }
 
+.front-page-header {
+  background-color: #262D33;
+}
+
 .hero {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   border-radius: 10px;
+  min-height: 570px;
+  background-color: #fff;
 }
 
 .hero .left {
@@ -139,10 +145,10 @@ body {
           justify-content: space-between;
 }
 
-.hero .left::after {
+.hero .left::before {
   content: "";
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   left: 0;
@@ -157,10 +163,12 @@ body {
   bottom: 0;
   right: 0;
   height: 100%;
-  z-index: -2;
+  z-index: 0;
 }
 
 .hero .left .author {
+  position: relative;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -208,6 +216,11 @@ body {
   font-family: 'Roboto Slab', serif;
   margin-top: 20px;
   margin-bottom: 50px;
+}
+
+.hero .left .post-text {
+  z-index: 2;
+  position: relative;
 }
 
 .hero .left .more {
